syntax = "proto3";

package flow.entities;

option csharp_namespace = "Flow.Net.Sdk.Protos.entities";

import "google/protobuf/timestamp.proto";

import "Protos/entities/collection.proto";
import "Protos/entities/block_seal.proto";
import "Protos/entities/execution_result.proto";
import "Protos/entities/block_header.proto";

message Block {
  bytes id = 1;
  bytes parent_id = 2;
  uint64 height = 3;
  google.protobuf.Timestamp timestamp = 4;
  repeated CollectionGuarantee collection_guarantees = 5;
  repeated BlockSeal block_seals = 6;
  repeated bytes signatures = 7;
  repeated ExecutionReceiptMeta execution_receipt_metaList = 8;
  repeated ExecutionResult execution_result_list = 9;
  BlockHeader block_header = 10;
}
